@@ -1,3 +1,10 @@
+Sat Apr 17 22:42:13 HKT 2004 William Brack <wbrack@mmm.com.hk>
+
+	* xmlschemas.c, xmlwriter.c, doc/examples/parse4.c,
+	  doc/examples/io2.c: minor warning cleanup (no change to logic)
+	* xinclude: fixed return value for internal function
+	  xmlXIncludeLoadFallback (now always 0 or -1)
+
 Sat Apr 17 21:32:32 HKT 2004 William Brack <wbrack@mmm.com.hk>
 
 	* valid.c: small enhancement to fix bug 139791
